// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkRating should render correctly 1`] = `
<div>
  <div
    aria-label="6.7 Average might recommend"
    className="bpk-rating"
  >
    <span
      aria-hidden="true"
      className="bpk-text bpk-text--base bpk-rating--base-rating bpk-rating--medium-rating"
    >
      <strong>
        6.7
      </strong>
    </span>
    <div
      className="bpk-rating--text"
    >
      <p
        aria-hidden="true"
        className="bpk-text bpk-text--base"
      >
        <strong>
          Average
        </strong>
      </p>
      <p
        aria-hidden="true"
        className="bpk-text bpk-text--xs"
      >
        Might recommend
      </p>
    </div>
  </div>
</div>
`;

exports[`BpkRating should support custom class names 1`] = `
<div>
  <div
    aria-label="6.7 Average might recommend"
    className="bpk-rating custom-classname"
  >
    <span
      aria-hidden="true"
      className="bpk-text bpk-text--base bpk-rating--base-rating bpk-rating--medium-rating"
    >
      <strong>
        6.7
      </strong>
    </span>
    <div
      className="bpk-rating--text"
    >
      <p
        aria-hidden="true"
        className="bpk-text bpk-text--base"
      >
        <strong>
          Average
        </strong>
      </p>
      <p
        aria-hidden="true"
        className="bpk-text bpk-text--xs"
      >
        Might recommend
      </p>
    </div>
  </div>
</div>
`;
